<resources>
    <string name="app_name">Guess The Race</string>

    <!--Auth screen-->
    <string name="auth_title">Registration</string>
    <string name="name">Name</string>
    <string name="greeting">Welcome to the application Guess The Race. Enter your name and press OK.</string>
    <string name="error_login">That name has already used.</string>
    <string name="error_login_length">Name should consist more than 3 symbols.</string>
    <string name="you_not_auth">You did not authorized.</string>

    <!--Home screen-->
    <string name="home_title">Guess The Race</string>
    <string name="black">African</string>
    <string name="white">European</string>
    <string name="you_guessed">You guessed!</string>
    <string name="you_not_guessed">You did not guess</string>
    <string name="images_over_title">Images are over</string>
    <string name="images_over_text">All images are over. If you want to play again press OK and clear watched images.</string>
    <string name="thanks_for_rating">Thank you for rating!</string>
    <string name="swipe_help">Swipe image to the right or left!</string>

    <!--Comments screen-->
    <string name="comments_title">Comments</string>
    <string name="comments_not_found">Comments was not found. You can be first!</string>
    <string name="add_comment">Add comment</string>
    <string name="success_add_comment">Comment successful added.</string>
    <string name="fail_add_comment">Error. Comment was not added.</string>
    <string name="fail_length_comment">Error. Comment have to be more than 10 symbols.</string>

    <!--Rating screen-->
    <string name="rating_title">Rating</string>
    <string name="racist">Racist</string>
    <string name="anti_racist">Anti-racist</string>
    <string name="top_users"><b>Top users</b></string>
    <string name="place_rating">Place</string>
    <string name="name_rating">Name</string>
    <string name="rating_rating">Rating</string>
    <string name="rank">Rank:</string>
    <string name="rang_1">Martin Luther King</string>
    <string name="rang_2">Nelson Rolihlahla Mandela</string>
    <string name="rang_3">Donald John Trump</string>
    <string name="rang_4">Member of Ku Klux Klan</string>
    <string name="rang_5">Adolf Hitler</string>
    <string name="rating_not_found">Rating was not found. You can be first!</string>

    <!--Notifications screen-->
    <string name="notifications_title">Notifications</string>
    <string name="notifications_not_found">New notifications was not found.</string>

    <!--Settings screen-->
    <string name="settings_title">Settings</string>
    <string name="app_rating"><b>App Rating</b></string>
    <string name="app_rating_subtext">Rate the app on Google Play</string>
    <string name="recommend_app"><b>Recommend this App</b></string>
    <string name="recommend_app_subtext">Recommend the Guess The Race App to a friend</string>
    <string name="clear_watched_images"><b>Clear Watched Images</b></string>
    <string name="clear_watched_images_subtext">Removes all previously saved Watched Images</string>
    <string name="privacy">Privacy</string>
    <string name="version">Version</string>
    <string name="music">Music</string>
    <string name="remove_from_watched_images">Would you like to remove all images from Watched Images?</string>
    <string name="remove">Remove</string>
    <string name="remove_success">Watched Images removed!</string>
    <string name="remove_error">Watched Images was not removed!</string>
    <string name="get_app_on_phone">Get the Guess The Race App for you Smartphone or Tablet: </string>
    <string name="select_app">Select App to Share Text and Image</string>

    <!--Privacy screen-->
    <string name="privacy_title">Privacy</string>

    <!--Feedback screen-->
    <string name="feedback_title">Feedback</string>
    <string name="feedback_message">Do you have questions or suggestions, or would you like to notify us of a technical problem? Then send us your feedback!\n\nIf you like our app, please rate it in the store: Google Play!</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_button">Send</string>
    <string name="preview_button">Preview</string>
    <string name="system_information">incl. system information</string>
    <string name="rate_app">Rate App</string>
    <string name="your_message">Your message</string>

    <!--About screen-->
    <string name="about_title">About</string>
    <string name="about_message">This application was created for my diploma. I have to collect statistics about people. How they can identify race of people only with help background and clothes. There is no racism here. If you have some pretension you can text me. But i hope that you spend good time in the application. And it\'ll be really great if you\'ll rate this app and tell to you friends about it.</string>

    <!--Rate dialog-->
    <string name="rate_title">Rate App</string>
    <string name="rate_text">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. \n Thanks for your support!</string>

    <!--Error messages-->
    <string name="check_internet_error">Nothing was found. Check the internet connection.</string>
    <string name="error_choose">Element selection error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="error">Error</string>
    <string name="network_error">Network error</string>
    <string name="not_modified_error">304 Not Modified</string>
    <string name="bad_request_error">400 Bad Request</string>
    <string name="unauthorized_error">401 Unauthorized</string>
    <string name="forbidden_error">403 Forbidden</string>
    <string name="not_found_error">404 Not Found</string>
    <string name="method_not_allowed_error">405 Method Not Allowed</string>
    <string name="conflict_error">409 Conflict</string>
    <string name="unprocessable_error">422 Unprocessable</string>
    <string name="server_error_error">500 Server Error</string>

    <!--Calligraphy Config-->
    <string name="font_main_regular">fonts/OpenSans-Light.ttf</string>
    <string name="font_main_medium">fonts/OpenSans-Regular.ttf</string>
    <string name="font_main_bold">fonts/OpenSans-Bold.ttf</string>
    <string name="font_path">fonts</string>

    <!--Navigation drawer-->
    <string name="hello_text">Hello, </string>
    <string name="home_item">Home</string>
    <string name="rating_item">Rating</string>
    <string name="settings_item">Settings</string>
    <string name="feedback_item">Feedback</string>
    <string name="about_item">About</string>
    <string name="exit">exit</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Are you really want to logout?</string>

    <!--General-->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--Admob-->
    <string name="admob_unit_id">ca-app-pub-6408266897351843/5980174013</string>
    <string name="admob_unit_id_bottom_banner">ca-app-pub-6408266897351843/3380318993</string>
</resources>
