<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/background_toolbar"
        android:paddingTop="24dp"
        app:navigationIcon="@drawable/ic_arrow_back_24dp"
        app:title="@string/settings_title"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <LinearLayout
            android:id="@+id/rateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_rating"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_rating_subtext"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginTop="8dp"
                android:background="@color/divider" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/recommendApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommend_app"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommend_app_subtext"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginTop="8dp"
                android:background="@color/divider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/clearFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_watched_images"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_watched_images_subtext"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginTop="8dp"
                android:background="@color/divider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginTop="8dp"
                android:background="@color/divider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginTop="8dp"
                android:background="@color/divider" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/musicSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:layout_marginTop="8dp"
            android:background="@color/divider" />

    </LinearLayout>

</LinearLayout>