<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="183dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/background_nav_header"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="38dp"
                android:src="@drawable/ic_logo"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/imageView"
                android:layout_marginEnd="15dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo_name"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/navDrawerMenuContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/homeMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_primary_color"
                android:drawableStart="@drawable/selector_home_icon"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/home_item"
                android:textColor="@drawable/selector_primary_text_color"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/ratingMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_primary_color"
                android:drawableStart="@android:drawable/btn_star_big_on"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/rating_item"
                android:textColor="@drawable/selector_primary_text_color"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/settingsMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_primary_color"
                android:drawableStart="@drawable/ic_settings"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/settings_item"
                android:textColor="@drawable/selector_primary_text_color"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/feedbackMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_primary_color"
                android:drawableStart="@drawable/ic_feedback"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/feedback_item"
                android:textColor="@drawable/selector_primary_text_color"
                android:textSize="14sp"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>